Update API documentation
